FIX: Vertical Alignment

--- a/Assets/css/glancer.css
+++ b/Assets/css/glancer.css
@@ -97,7 +97,7 @@
 
 .glancer-view {
     cursor: context-menu;
-    vertical-align: middle;
+    vertical-align: bottom;
 }
 
 .glancer-bar .glancer-view {
